[package]
name = "usps"
version = "0.1.0"
authors = ["nkconnor <email@nconnor.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Implementation of the USPS Postal Address standards"
repository = "https://github.com/nkconnor/rust-usps"
documentation = "https://docs.rs/usps"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
